# scufchat

./: README.md  alembic.ini  package.json  pyproject.toml  vite.config.ts
backend/: .env.example  .pre-commit-config.yaml  README.md
backend/alembic/: env.py
backend/alembic/versions/: 7dc2b769e17e_altered_all_ids_to_autoincrement_.py  c4cff08e26a2_added_field_chat_owner.py  ef18c82c1958_removed_friends.py
backend/fapigraphproject/: __main__.py  errors.py  models.py
backend/fapigraphproject/graphql_api/: graphql_service.py  queries.py
backend/fapigraphproject/methods/: chat_methods.py  user_methods.py
backend/fapigraphproject/ws_api/: websocket_service.py
fapigraphproject/: config.py  db.py
fapigraphproject/graphql_api/: mutations.py  types.py
fapigraphproject/methods/: authentication_methods.py  registration_methods.py
frontend/: index.html  package-lock.json
frontend/src/: main.tsx
frontend/src/apollo/: client.tsx
frontend/src/constants/: localStorage.ts
frontend/src/hooks/: useChatInitInfo.ts  useChatWebSocket.ts  useCurrentUser.ts  useDeleteChat.tsx
frontend/src/services/: authApi.ts  graphqlApi.ts  types.ts
frontend/src/store/: store.ts
src/apollo/: client.tsx
src/pages/All/: All.module.scss  All.tsx
src/pages/CreateChat/: CreateChat.tsx
src/pages/Login/: AuthTypes.ts  Login.module.scss  Login.tsx
src/pages/NotFound/: NotFound.module.scss  NotFound.tsx
src/router/: router.tsx
src/services/: chatApi.ts  searchUsersApi.ts  userApi.ts
src/store/: StateSchema.ts
src/store/Auth/: authTypes.ts
src/styles/: globals.scss
(+63 files in other folders)
